--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
 cortex-m-rt = "0.7.3"
 nb = "1.1"
 rand_core = "0.6.4"
-stm32f4 = "0.15.1"
+stm32f4 = { path = "/home/burrbull/stm32-rs/stm32f4"}
 synopsys-usb-otg = { version = "0.3.2", features = ["cortex-m"], optional = true }
 sdio-host = { version = "0.6.0", optional = true }
 embedded-dma = "0.2.0"
