--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ bare-metal = { version = "1" }
 void = { default-features = false, version = "1.0.2" }
 embedded-hal = { features = ["unproven"], version = "0.2.7" }
 embedded-hal-nb = "1.0.0-rc.1"
+embedded-io = "0.6.1"
 display-interface = { version = "0.4.1", optional = true }
 fugit = "0.3.6"
 fugit-timer = "0.1.3"
