--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,8 @@ embedded-storage = "0.3"
 vcell = "0.1.3"
 document-features = "0.2"
 
+micromath = { version = "2.1.0", optional = true }
+
 [dependencies.time]
 version = "0.3.14"
 default-features = false
@@ -214,6 +216,7 @@ gpio-f427 = [
     "can1", "can2",
     "dac",
     "dcmi",
+    "dma2d",
     "eth",
     "i2c3",
     "ltdc",
@@ -251,6 +254,7 @@ gpio-f469 = [
     "adc2", "adc3",
     "can1", "can2",
     "dac",
+    "dma2d",
     "dcmi",
     "dsihost",
     "eth",
@@ -310,6 +314,7 @@ dac = []
 dcmi = []
 dfsdm1 = ["dfsdm"]
 dfsdm2 = ["dfsdm"]
+dma2d = []
 dsihost = []
 eth = []
 fmc = []
@@ -324,7 +329,7 @@ gpioj = []
 gpiok = []
 i2c3 = []
 lptim1 = []
-ltdc = []
+ltdc = ["dep:micromath"]
 quadspi = []
 otg-fs = []
 otg-hs = []
@@ -529,6 +534,10 @@ required-features = ["tim2"] # stm32f411
 [[example]]
 name = "stopwatch-with-ssd1306-and-interrupts-and-dma-i2c"
 required-features = ["tim2", "stm32f411"] # stm32f411
+
+[[example]]
+name = "ltdc-screen"
+required-features = ["stm32f429"]
 
 [[example]]
 name = "timer-periph"
